--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,23 @@
     <string name="app_name">Movies App</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="pass">PassWord</string>
+    <string name="register">Register</string>
+    <string name="username">username</string>
+    <string name="welcome">Welcome</string>
+    <string name="login">login</string>
+    <string name="log_in_to_your_account">log_in_to_your_account</string>
+    <string name="log_in_with_tmdb">log_in_with_tmdb</string>
+    <string name="login_in_with_firebase">login_in_with_firebase</string>
+    <string name="categories">categories</string>
+    <string name="movie_db_app">movie_db_app</string>
+    <string name="find_your_movies">find_your_movies</string>
+    <string name="log_out">Log Out</string>
+    <string name="search_here">search_here</string>
+    <string name="about_movie">about_movie</string>
+    <string name="movie_name">movie name</string>
+    <string name="release_year">release year</string>
+    <string name="rating">rating</string>
+    <string name="count">count</string>
+    <string name="popularity">popularity</string>
 </resources>
