added sending the navigation to another fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,15 +7,15 @@
     <string name="username">username</string>
     <string name="welcome">Welcome</string>
     <string name="login">login</string>
-    <string name="log_in_to_your_account">log_in_to_your_account</string>
-    <string name="log_in_with_tmdb">log_in_with_tmdb</string>
-    <string name="login_in_with_firebase">login_in_with_firebase</string>
+    <string name="log_in_to_your_account">log in to your account</string>
+    <string name="log_in_with_tmdb">log in with tmdb</string>
+    <string name="login_in_with_firebase">login in with firebase</string>
     <string name="categories">categories</string>
-    <string name="movie_db_app">movie_db_app</string>
-    <string name="find_your_movies">find_your_movies</string>
+    <string name="movie_db_app">movie db app</string>
+    <string name="find_your_movies">find your movies</string>
     <string name="log_out">Log Out</string>
-    <string name="search_here">search_here</string>
-    <string name="about_movie">about_movie</string>
+    <string name="search_here">search here</string>
+    <string name="about_movie">about movie</string>
     <string name="movie_name">movie name</string>
     <string name="release_year">release year</string>
     <string name="rating">rating</string>
